# Workplace-Risk-Predictive-modelling

./: .cursorignore  .gitignore  00_STRATEGY_AND_PLAN.md  01_SOLUTION_Option1_Predictive_Risk.md  02_STEP_BY_STEP_PLAN.md  AI_USAGE.md  PROJECT_MASTER.md  README.md  TECHNICAL_DOCUMENTATION.md  pyproject.toml  requirements.txt
Reference documents/: MLITSD_Senior_Data_Scientist_Job_Posting.md  Notes.md  ohs_bosta_data_dictionary.md  senior_data_scientist_assignment_brief.md
data/: 2024-25_ohs_inspections.csv  Allowed_traumatic_fatalities.xlsx  Injury rates.xlsx  naics-scian-2017-element-v3-eng.csv  naics-scian-2017-structure-v3-eng.csv  sample_inspection_reports.md
data/processed/: llm_extraction_example.json  modeling_table.csv  modeling_table_dictionary.md
files/: Design_Notes.md  MLITSD_Risk_Identification.pptx  Speaker_Script.md
learning documents/: concept_log.md  decision_log.md
scripts/: 01_data_exploration.ipynb  02_modeling_table.ipynb  03_model.ipynb  04_boosting_shap.ipynb  verify_env.py
slides/: POWERPOINT_GENERATION_PROMPT.md  PRESENTATION_SCRIPT.md  SLIDE_DECK_OUTLINE.md
src/notebooks/: README.md
