[project]
name = "mlitsd-ds-project"
version = "0.1.0"
description = "MLITSD Senior DS assignment — OHS predictive risk prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
boosting = ["lightgbm>=4.3", "shap>=0.45"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
